--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demo project for NodeJS intro meetup.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --require should --reporter spec"
+    "test": "./node_modules/.bin/mocha -r should -R spec -t 4000 -s 1500"
   },
   "repository": {
     "type": "git",
