--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "ejs": "~0.8.5",
     "express": "~3.4.8",
-    "superagent": "~0.16.0"
+    "superagent": "~0.16.0",
+    "async": "~0.2.10"
   },
   "devDependencies": {
     "should": "~3.1.2",
